test: Migrate tests to temp folders and adjust testst (#1578)
Co-authored-by: jhaeu <138764906+jhaeu@users.noreply.github.com>